# ComfyUI-Flow-Assistor

./: LICENSE  NOTICE  README.md  __init__.py  any_passthrough_nodes.py  bypass_node.py  camera_angle_control_node.py  clean_gpu_node.py  clip_text_enrichment_node.py  delay_node.py  detail_enhance_node.py  display_text_node.py  extension.py  image_latent_resolution_extractor_node.py  image_resolution_extractor_node.py  image_resolution_fit_node.py  lora_online_node.py  multiplication_node.py  node_list.json  output_any_debug_data_node.py  prompt_queue_folder_node.py  prompt_queue_node.py  pyproject.toml  resolution_select_node.py  routes.py  runtime_state.py  tile_manager_nodes.py  v3_types.py  visual_marquee_node.py
.github/workflows/: publish.yml
nodes/: __init__.py  categories.py
nodes/diagnostics/: __init__.py  debug_data.py  precision.py
nodes/flow/: __init__.py  bypass_control.py  delay.py  passthrough.py
nodes/image/: __init__.py  caption_creator.py  latent_resolution_extractor.py  resolution_extractor.py  resolution_fit.py  resolution_selector.py  tiling.py  visual_marquee.py
nodes/loaders/: __init__.py  lora_online.py
nodes/sampling/: __init__.py  detail_enhance.py
nodes/text/: __init__.py  camera_angle.py  display_text.py  prompt_enrichment.py  prompt_queue.py  prompt_queue_folder.py
nodes/utils/: __init__.py  memory_cleaner.py  multiplication.py
web/extensions/flow_assistor/: bypass_control.js  caption_creator.js  debug_data.js  display_text.js  lora_online.js  precision_display.js  resolution_groups.js  visual_marquee.js
workflows/: Flux Kontext Dev & Flow Assistor.json
