[project]
name = "comfyui-flow-assistor"
description = "V3-native flow, debugging, precision, prompt, camera, resolution, and workflow utility nodes for ComfyUI"
version = "2.0.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
tags = ["v3", "flow", "text", "image", "loaders", "sampling", "diagnostics", "utils"]
authors = [
  { name = "Merserk" }
]

[project.urls]
Repository = "https://github.com/Merserk/ComfyUI-Flow-Assistor"

[tool.comfy]
PublisherId = "merserk"
DisplayName = "ComfyUI Flow Assistor"
Icon = "https://github.com/user-attachments/assets/c9306ce8-96b0-4535-91f7-144f2ac27840"
